--- a/runs.yml
+++ b/runs.yml
@@ -1,35 +1,41 @@
 Tires:
   Tire Names: [
-    "Hoosier_16_7.5x7_R25B_8psi",
-    "Hoosier_16_7.5x7_R25B_10psi",
-    "Hoosier_16_7.5x7_R25B_12psi",
-    "Hoosier_16_7.5x7_R25B_12psi (scaled)",
-    "Hoosier_16_7.5x7_R25B_14psi"
+    "Hoosier_R25B_16x7p5_10_on_7in",
+    # "Hoosier_R25B_16x6_10_on_7in",
+    # "Hoosier_R25B_18x6_10_on_7in (scaled)",
+    # "Hoosier_R25B_18x6_10_on_7in",
+    # "Hoosier_R25B_16x7p5_10_on_7in",
+    # "Hoosier_R25B_18x7p5_10_on_7in",
+    "Hoosier_R25B_20p5x7_13_on_7in",
+    # "Hoosier_R25B_16x7p5_10_on_7in",
   ]
   .tir File Paths: [
-    "./tire_toolkit/assets/tir_files/Round_8_Hoosier_R25B_16x7p5_10_on_7in_8psi_PAC02_UM2.tir",
-    "./tire_toolkit/assets/tir_files/Round_8_Hoosier_R25B_16x7p5_10_on_7in_10psi_PAC02_UM2.tir",
     "./tire_toolkit/assets/tir_files/Round_8_Hoosier_R25B_16x7p5_10_on_7in_12psi_PAC02_UM2.tir",
-    "./tire_toolkit/assets/tir_files/Round_8_Hoosier_R25B_16x7p5_10_on_7in_12psi_PAC02_UM2.tir",
-    "./tire_toolkit/assets/tir_files/Round_8_Hoosier_R25B_16x7p5_10_on_7in_14psi_PAC02_UM2.tir"
+    # "./tire_toolkit/assets/tir_files/Round_8_Hoosier_R25B_16x6_10_on_7in_12psi_PAC02_UM2.tir",
+    # "./tire_toolkit/assets/tir_files/Round_6_Hoosier_R25B_18x6_10_on_7in_12psi_PAC02_UM4.tir",
+    # "./tire_toolkit/assets/tir_files/Round_6_Hoosier_R25B_18x6_10_on_7in_12psi_PAC02_UM4.tir"
+    # "./tire_toolkit/assets/tir_files/Round_8_Hoosier_R25B_16x7p5_10_on_7in_12psi_PAC02_UM2.tir"
+    # "./tire_toolkit/assets/tir_files/Round_6_Hoosier_R25B_18x7p5_10_on_7in_12psi_PAC02_UM4.tir",
+    "./tire_toolkit/assets/tir_files/Round_6_Hoosier_R25B_20p5x7_13_on_7in_12psi_PAC02_UM4.tir",
+    # "./tire_toolkit/assets/tir_files/Round_8_Hoosier_R25B_16x7p5_10_on_7in_12psi_PAC02_UM2.tir",
   ]
 
 
 Scale Virtual Tires:
-  Run: True
-  Reference: "Hoosier_16_7.5x7_R25B_8psi"
-  Target: "Hoosier_16_7.5x7_R25B_12psi"
+  Run: False
+  Reference: "Hoosier_R25B_16x6_10_on_7in"
+  Target: "Hoosier_R25B_18x6_10_on_7in"
   Tires to Scale: [
-    "Hoosier_16_7.5x7_R25B_12psi (scaled)"
+    "Hoosier_R25B_18x6_10_on_7in (scaled)"
   ]
-  Minimum FZ: 100
-  Maximum FZ: 1091
-  Weighting: [1, 1, 1, 1, 1, 1, 1, 1, 0] # [mu_x, mu_y, C_alpha, C-mz, alpha_at_peak_fy, slip_stffienss, alpha_at_peak_Mz, kappa_at_peak_Fx, C_gamma]
+  Minimum FZ: 100 # N
+  Maximum FZ: 2000 # N
+  Weighting: [0, 2, 1, 1, 1, 0, 0, 0, 0, 0] # [mu_x, mu_y, C_alpha, C_mz, alpha_at_peak_fy, slip_stffienss, alpha_at_peak_Mz, kappa_at_peak_Fx, C_gamma, pneu_trail]
   Refinement: 10 # Leave as 10 for now
 
 
 Tire Assessment:
-  Run: True
+  Run: False
   Reference: "N/A"
   Targets: [
     "N/A"
@@ -40,12 +46,13 @@ Tire Assessment:
 First Principles Plots:
   Run: True
   Tire Names: [
-    "Hoosier_16_7.5x7_R25B_8psi",
-    "Hoosier_16_7.5x7_R25B_10psi",
-    "Hoosier_16_7.5x7_R25B_12psi",
-    "Hoosier_16_7.5x7_R25B_12psi (scaled)",
-    "Hoosier_16_7.5x7_R25B_14psi"
+    "Hoosier_R25B_16x7p5_10_on_7in",
+    # "Hoosier_R25B_20p5x7_13_on_7in",
+    # "Hoosier_R25B_18x7p5_10_on_7in",
+    # "Hoosier_R25B_16x6_10_on_7in",
+    # "Hoosier_R25B_18x6_10_on_7in (scaled)",
+    # "Hoosier_R25B_18x6_10_on_7in"
   ]
-  Minimum FZ: 100
-  Maximum FZ: 1091
+  Minimum FZ: 100 # N
+  Maximum FZ: 2000 # N
   Output File Name: "first_principles_metrics.pdf"
